# back_end_indexer

./: .gitignore  Cargo.toml  Readme.md  my_project.vim
docs/: test.txt
src/: hashmaps.rs  index.rs  lexer.rs  lib.rs  main.rs  parsers.rs  types.rs  utils.rs  walkdir.rs
