[package]
name = "back_end_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="search_engine"

[dependencies]
poppler = "0.3.2"
serde_json = "1.0.108"
serde =  { version = "1.0.190", features = ["derive"] }

walkdir = "2.4.0"
xml-rs = "0.8.19"
rand = "0.8.5"
